# ludii-jax

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
benchmarks/: run_and_plot.py  throughput.py
benchmarks/results/: data.json
examples/: batch_simulate.py  play_random.py
src/ludii_jax/: __init__.py  compile.py
src/ludii_jax/analysis/: __init__.py  game_info.py  sites.py  topology.py
src/ludii_jax/compiler/: compose.py  conditions.py  effects.py  moves.py
src/ludii_jax/parser/: ludii_grammar.lark  parse.py
src/ludii_jax/runtime/: __init__.py  environment.py  lookup.py  state.py
tests/: generate_trace.java  generate_traces.py  test_against_ludii.py  test_coverage.py
tests/traces/: Adidada.json  Agon.json  Akidada.json  Alea_Evangelii.json  Alquerque_de_Tres.json  Aralzaa.json  ArdRi.json  Atari_Go.json  Atoll.json  Aw-li_On-nam_Ot-tjin.json  Bamboo.json  BlooGo.json  Brazilian_Draughts.json  Breakthrough.json  Canadian_Draughts.json  Cavity.json  Challis_Ghutia.json  Chameleon.json  Clobber.json  ConHex.json  Connect6.json  Connect_Four.json  Cross.json  Crossway.json  Dai_Hasami_Shogi.json  Dam.json  Das_Bohnenspiel.json  Diagonal_Hex.json  Diagonals.json  Djara-Badakh.json  Doov.json  Dorvolz.json  Driesticken.json  Dris_at-Talata.json  Duidoku.json  Ecosys.json  Elea.json  Engijn_Zirge.json  English_Draughts.json  English_Wari_(St._Lucia).json  (+92 more)
