[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ludii-jax"
version = "0.1.0"
description = "Compile Ludii board games to JAX-accelerated environments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "lark>=1.1.0",
    "numpy>=1.24.0",
]

[project.urls]
Repository = "https://github.com/claycantrell/ludii-jax"

[tool.setuptools.packages.find]
where = ["src"]
