[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ludii-jax"
version = "0.1.0"
description = "Compile Ludii board games to JAX-accelerated environments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["jax", "board-games", "ludii", "reinforcement-learning", "game-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "lark>=1.1.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/claycantrell/ludii-jax"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
